<resources>

    <string name="disease_detected">Disease: %1$s</string>
    <string name="cure_info">Cure: %1$s</string>
    <string name="cure_not_available">Cure information not available</string>
    <string name="error_loading_cure">Error loading cure information</string>

    <string name="app_name">AgriAutomationHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="auto_irrigation">Auto Irrigation</string>
    <string name="fertilizer_recommendation">Fertilizer Recommendation</string>
    <string name="crop_disease_prediction">Crop Care</string>
    <string name="welcome_message">Hello Farmers</string>
    <string name="services">Services</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="title_activity_soil_fertility_check">Soil_Fertility_check</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="app_id">1:191351033464:android:dfd5400cc7978bd648278d</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_logout">Logout</string>
    <string name="irrigation">Irrigation</string>
    <string name="crop_care">Crop Care</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="status">Status:</string>
    <string name="help_page">Help Page</string>
    <string name="getting_started">Getting Started</string>
    <string name="detailed_getting_started">Welcome to our application! Here are the steps to get you started:\n1. Download and install the application.\n2. Create an account by signing up.\n3. Follow the on-screen instructions to set up your profile.\n4. Start using the features available in the app.</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="detailed_fqas">Q: How do I reset my password?\nA: Click on \'Forgot Password\' at the login screen, and follow the instructions to reset your password.\n\nQ: How can I contact support?\nA: You can contact support by clicking on the \'Contact Support\' section below or emailing support@example.com.</string>
    <string name="contact_support">Contact Support</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="cilck_here_to_register">Cilck Here To Register</string>
    <string name="today_s_weather">Today\'s Weather</string>
    <string name="location">Location</string>
    <string name="loading_weather">Loading weather...</string>
    <string name="top_news">Top News</string>
    <string name="register">Register</string>
    <string name="cilck_here_to_login">Cilck Here To Login</string>
    <string name="settings">Settings</string>
    <string name="a2hub">A2Hub</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="private_account">Private Account</string>
    <string name="security_amp_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="text_size">Text Size</string>
    <string name="languages">Languages</string>
    <string name="send_us_a_message">Send us a Message</string>
    <string name="about_us">About Us</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="enter_the_following_values_to_check_soil_fertility">Enter the following values to check soil fertility-</string>
    <string name="nitrogen_20_50_ppm">20 - 50 ppm</string>
    <string name="phosphorus_20_50_ppm">20 - 50 ppm</string>
    <string name="potassium_150_300_ppm">150 - 300 ppm</string>
    <string name="ph_value_6_8_5">6 - 8.5</string>
    <string name="check_soil_fertility">Check Soil Fertility</string>
    <string name="news">News</string>
    <string name="marketview">MarketView</string>
    <string name="mandi">Mandi</string>

    <string-array name="expense_categories">
        <item>Category</item>
        <item>Seeds</item>
        <item>Fertilizers</item>
        <item>Pesticides</item>
        <item>Machinery</item>
        <item>Electricity</item>
        <item>Labour</item>
        <item>Land Rent</item>
        <item>Other</item>
    </string-array>

    <string-array name="crop_types">
        <item>Corn</item>
        <item>Wheat</item>
        <item>Rice</item>
        <item>Soyabean</item>
        <item>kidneybeans</item>
        <item>maize</item>
        <item>mothbeans</item>
        <item>cotton</item>
        <item>mungbean</item>
        <item>coconut</item>
        <item>lentil</item>
        <item>grapes</item>
        <item>papaya</item>
        <!-- Add more crops as needed -->
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="crop_not_detected">Crop Not Detected</string>
    <string name="fertilizer_calculator">Fertilizer Calculator</string>
    <string name="soil_ph">Soil pH</string>
    <string name="enter_soil_ph">Enter Soil pH</string>
    <string name="crop_type">Crop Type</string>
    <string name="land_area_in_hectares">Land Area (in hectares)</string>
    <string name="enter_land_area">Enter Land Area</string>
    <string name="calculate_fertilizer">Calculate Fertilizer</string>
    <string name="fertilizer_requirement_will_be_displayed_here">Fertilizer requirement will be displayed here</string>
    <string name="location_your_location">Location: [Your Location]</string>
    <string name="farmer_services">Farmer Services</string>
    <string name="mandi_crop_price">Mandi Crop Price</string>
    <string name="report_date">Report Date</string>
    <string name="select_date">Select Date</string>
    <string name="district_name">District Name</string>
    <string name="mandi_detail">Mandi Detail</string>
    <string name="service_name">Service Name</string>
    <string name="crop_recommendation">Crop Recommendation</string>
    <string name="enter_data_to_get_recommendation">Enter data to get Recommendation</string>
    <string name="nitrogen_n">Nitrogen (N):</string>
    <string name="enter_nitrogen_level">Enter Nitrogen</string>
    <string name="phosphorus_p">Phosphorus (P):</string>
    <string name="enter_phosphorus_level">Enter Phosphorus</string>
    <string name="potassium_k">Potassium (K):</string>
    <string name="enter_potassium_level">Enter Potassium</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="enter_humidity_level">Enter Humidity</string>
    <string name="ph">pH:</string>
    <string name="enter_ph_level">Enter pH</string>
    <string name="rainfall">Rainfall:</string>
    <string name="enter_rainfall_level">Enter Rainfall</string>
    <string name="get_recommendation">Get Recommendation</string>
    <string name="recommendation_will_be_displayed_here">Recommendation will be displayed here</string>
    <string name="get_details_about_crop">Get Details about Crop</string>
    <string name="selling_price_calculator">Selling Price Calculator</string>
    <string name="condition">Condition</string>
    <string name="crop_detail">Crop Detail</string>
    <string name="crop_name">Crop Name</string>
    <string name="camera">Camera</string>
    <string name="select_image">Select Image</string>
    <string name="get_prediction">Get Prediction</string>
    <string name="market_view">Market View</string>
    <string name="district">District</string>
    <string name="commodity_group">Commodity Group</string>
    <string name="crop">Crop</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="expenses_list">Expenses List</string>
    <string name="save_expense">Save Expense</string>
    <string name="price">Price</string>
    <string name="expense_name_optional">Expense Name (Optional)</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="yield_quintal">Yield (Quintal)</string>
    <string name="lowest_selling_price_0_00">Lowest Selling Price: ₹0.00</string>
    <string name="hint_enter_yield">Enter Yield</string>

</resources>